Chore: rename createAsync to createImpl, prune unused createMultiple, fix small sonar issues